--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
+numpy>=1.21.0
 pandas>=1.3.0
-numpy>=1.19.0
 scikit-learn>=0.24.0
+xgboost>=1.5.0
 matplotlib>=3.4.0
 seaborn>=0.11.0
-streamlit>=1.10.0
-scipy>=1.7.0
-joblib>=1.0.0
-jupyter>=1.0.0
-notebook>=6.4.0
-ipykernel>=6.0.0
+fpdf>=1.7.2
+pytest>=6.0.0
+pytest-cov>=2.12.0
+coverage>=5.5
+flake8>=3.9.0
+codecov>=2.1.0
