--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,9 +24,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-cov coverage codecov
-        pip install numpy pandas scikit-learn xgboost fpdf matplotlib seaborn
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install --no-cache-dir xgboost
+        python -m pip install --no-cache-dir numpy pandas scikit-learn
+        python -m pip install --no-cache-dir fpdf matplotlib seaborn
+        python -m pip install --no-cache-dir flake8 pytest pytest-cov coverage codecov
+        if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
     
     - name: Lint with flake8
       run: |
@@ -37,7 +39,7 @@ jobs:
     
     - name: Run tests with coverage
       run: |
-        pytest tests/ -v --cov=./ --cov-report=xml
+        python -m pytest tests/ -v --cov=./ --cov-report=xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
